# ma_vision

auto_aim/: CMakeLists.txt  package.xml
auto_aim/include/auto_aim/: auto_aim_node.hpp
auto_aim/src/: auto_aim_node.cpp
detector_openvino/: CMakeLists.txt  detect.cpp  package.xml
detector_openvino/include/: detect.hpp
ma_vision/: CMakeLists.txt  package.xml
ma_vision_bringup/: CMakeLists.txt  package.xml
ma_vision_bringup/config/: default.yaml
ma_vision_bringup/launch/: camera_components.launch.py  mv_launch.py  node.launch.py
ma_vision_interfaces/: CMakeLists.txt  package.xml
ma_vision_interfaces/include/: ma_vision_interfaces.hpp
ma_vision_interfaces/msg/: SerialSendData.msg
mindvision_ros/: CMakeLists.txt  package.xml
mindvision_ros/config/: MV-SUA133GC.config
mindvision_ros/src/: mindvision_node.cpp
power_test/: CMakeLists.txt  README.md  package.xml
power_test/src/: power_test.cpp
serial_test/: CMakeLists.txt  package.xml
serial_test/include/serial_test/: serial.hpp
serial_test/src/: serial.cpp  serial_test.cpp
