<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ma_vision_bringup</name>
  <version>0.0.0</version>
  <description>ma_vision packages's bringup, have 'launch' and 'config' directories</description>
  <maintainer email="2060718292@qq.com">yiyu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>mindvision_ros</depend>
  <depend>rclcpp_components</depend>
  <depend>composition</depend>
  <depend>ma_vision_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
