<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>power_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2060718292@qq.com">yiyu</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>
  <!-- <depend>ma_vision_interfaces</depend> -->
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
